<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="permission_camera_rationale">Access to the camera is needed for detection.</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode_header" translatable="false">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>


    <string name="ok_button">Next</string>
    <string name="remove_button">Remove</string>

    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="cancel">Cancel</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button" translatable="false">go back</string>
    <string name="share_text">A must read book: </string>

    <!-- Book added/removed toast strings. -->
    <string name="book_added">has been added to your library.</string>
    <string name="book_removed">The book has been removed to your library.</string>


    <!-- No internet connection available -->
    <string name="empty_add_book_list">No Book Information Available</string>
    <string name="empty_add_book_list_no_network">No book information available. The network is not available to fetch book data.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    This version uses Mobile Vision API by Google to recognize and capture ISBN-13 barcodes of the books. This version is modified by Paskal Stoyanov as part
    of the Super-Duo project from the Android Developer Nanodegree program.
    The original version of this app was initially built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage.</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
</resources>
